# webgl-wasm-rust-test

./: Cargo.toml  debug_build.sh
public/: index.html
src/: lib.rs
